--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="css.css">
 
-      <title>Responsive portfolio ousmane</title>
+      <title>Ecole Moderne Lambangni Plus</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -66,7 +66,7 @@
          <!--==================== HOME ====================-->
          <section class="home section" id="home">
             <div class="home__container container grid">
-               <h1 class="home__name multiple-text">Ecole Moderne Lanbagni Plus</h1>
+               <h1 class="home__name"><span class="multiple-text"></span></h1>
                <div class="home__perfil">
                   <div class="home__image">
                      <img src="image7.jpg" alt="image" class="home__img">
